--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,10 @@
 # See: https://circleci.com/docs/reference/configuration-reference
 version: 2.1
 
+
+orbs:
+  slack: circleci/slack@4.10.1
+
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/guides/orchestrate/jobs-steps/#jobs-overview & https://circleci.com/docs/reference/configuration-reference/#jobs
 jobs:
@@ -21,6 +25,23 @@ jobs:
       - run:
           name: "Say hello"
           command: "echo Hello, World!"
+  
+  setup:
+    docker:
+     - image: cimg/python:3.11
+
+    steps:
+      - checkout
+      - run:
+          name: "rear entorno virtual"
+          command: 
+            python -m venv venv
+            . venv/bin/activate
+            pip install --upgrade pip
+            pip install -r requirements.txt
+            
+  
+
 
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/guides/orchestrate/workflows/ & https://circleci.com/docs/reference/configuration-reference/#workflows
